[package]
name = "downloader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["serde_derive"] }
csv = "1.3.0"
rkyv = { version = "0.7", features = ["validation"], default-features = false }
kiddo = { version = "4.0.0", features = ["serialize_rkyv"] }
reqwest = "0.11.23"
futures = "0.3.30"
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread"] }
zip = "0.6.6"
phf = { version = "0.11.2", features = ["macros"] }